fix(ffe-form): use overflow-wrap:anywhere with word-break:normal

--- a/packages/ffe-form/less/radio-block.less
+++ b/packages/ffe-form/less/radio-block.less
@@ -10,7 +10,6 @@
     width: 100%;
     transition: width @ffe-transition-duration @ffe-ease-in-out-back;
     overflow-wrap: anywhere;
-    hyphens: auto;
 
     &__content,
     &__header {
