--- a/packages/ffe-form/less/radio-button.less
+++ b/packages/ffe-form/less/radio-button.less
@@ -3,7 +3,6 @@
 
     line-height: var(--line-height);
     overflow-wrap: anywhere;
-    hyphens: auto;
     font-family: var(--ffe-g-font);
     font-variant-numeric: tabular-nums;
     display: grid;
