--- a/packages/ffe-form/less/radio-switch.less
+++ b/packages/ffe-form/less/radio-switch.less
@@ -20,7 +20,6 @@
     margin-top: @ffe-spacing-sm;
     line-height: 1.5;
     overflow-wrap: anywhere;
-    hyphens: auto;
 
     &::before {
         content: '';
