--- a/packages/ffe-form/less/tooltip.less
+++ b/packages/ffe-form/less/tooltip.less
@@ -46,7 +46,6 @@
         visibility: hidden;
         transition: height @ffe-transition-duration @ffe-ease;
         overflow-wrap: anywhere;
-        hyphens: auto;
     }
 
     &--open &__text {
